--- a/Prism_POC/Shared/Prism_POC.Core/Views/MainPage.xaml
+++ b/Prism_POC/Shared/Prism_POC.Core/Views/MainPage.xaml
@@ -11,6 +11,7 @@
             Margin="16"
             BackgroundColor="White" 
             Command="{Binding NavigateToSecondPageCommand}"
+            CommandParameter="SecondPage"
             Text="Navigate to Second Page"
             TextColor="{StaticResource NavigationButtonColor}" />
     </StackLayout>
